@@ -3,3 +3,5 @@ void fetch_create_directory(const char *path, Element *node);
 Task *fetch_archive(const char *file, Element *group, Index *index);
 int build_ddds_for_site(Index *index, const char *site);
 void fetch_run_tests(void);
+void fetch_set_auto_reject(const char *request, uid_t uid);
+int fetch_check_auto_reject(const char *request, uid_t uid);
